# vihaco

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHORS  CLA.md  CONTRIBUTING.md  Cargo.toml  Ion.toml  LICENSE  README.md  RELEASING.md  index.html  licenserc.header.txt  licenserc.toml  mise.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  license-headers.yml  release-plz.yml
_astro/: Base.Bnd5gKDh.css
crates/vihaco/: CHANGELOG.md  Cargo.toml
crates/vihaco-cpu/: CHANGELOG.md  Cargo.toml
crates/vihaco-cpu/src/: component.rs  data.rs  display.rs  instruction.rs  lib.rs  outcome.rs  parse_helpers.rs
crates/vihaco-derive/: CHANGELOG.md  Cargo.toml
crates/vihaco-derive/src/: attr_component.rs  attr_composite.rs  attr_observe.rs  derive_instruction.rs  derive_machine.rs  lib.rs
crates/vihaco-doctests/: Cargo.toml
crates/vihaco-doctests/src/: lib.rs
crates/vihaco-macros/: Cargo.toml
crates/vihaco-parser/: Cargo.toml
crates/vihaco-parser-core/: CHANGELOG.md  Cargo.toml
crates/vihaco-parser-core/src/: impls.rs  lib.rs
crates/vihaco-parser-core/src/container/: bytecode.rs  mod.rs  parsed_file.rs  section.rs  sst.rs
crates/vihaco-parser/src/: attr.rs  codegen.rs  legacy_codegen.rs  lib.rs
crates/vihaco-parser/tests/: basic.rs  compile_errors.rs  delegate.rs  delimiters.rs  head.rs  parse_with.rs  patterns.rs  struct.rs  three_fields.rs
crates/vihaco-parser/tests/compile_errors/: delegate_before_token.rs  delegate_before_token.stderr  delegate_multi_field.rs  delegate_multi_field.stderr  delegate_with_delimiters.rs  delegate_with_delimiters.stderr  delegate_with_parse_with.rs  delegate_with_parse_with.stderr  delegate_with_token.rs  delegate_with_token.stderr  delimiters_on_unit.rs  delimiters_on_unit.stderr  legacy_with_nested_syntax_class.rs  legacy_with_nested_syntax_class.stderr  pattern_duplicate_field.rs  pattern_duplicate_field.stderr  pattern_duplicate_index.rs  pattern_duplicate_index.stderr  pattern_empty.rs  pattern_empty.stderr  pattern_index_out_of_bounds.rs  pattern_index_out_of_bounds.stderr  pattern_index_overflow.rs  pattern_index_overflow.stderr  pattern_instruction_without_token.rs  pattern_instruction_without_token.stderr  pattern_invalid_binding_identifier.rs  pattern_invalid_binding_identifier.stderr  pattern_leading_space.rs  pattern_leading_space.stderr  pattern_missing_field.rs  pattern_missing_field.stderr  pattern_missing_index.rs  pattern_missing_index.stderr  pattern_mixed_bindings.rs  pattern_mixed_bindings.stderr  pattern_named_index_binding.rs  pattern_named_index_binding.stderr  pattern_repeated_space.rs  pattern_repeated_space.stderr  (+36 more)
crates/vihaco/src/: __private.rs  color.rs  effect.rs  frame.rs  instruction.rs  instruction_syntax.rs  lib.rs  loader.rs  machine.rs  module.rs  program.rs  value.rs  value_cpu.rs
crates/vihaco/src/binary/: common.rs  context.rs  file.rs  format.rs  mod.rs  parser.rs  section.rs  tests.rs  text.rs
crates/vihaco/src/macros/: mod.rs
crates/vihaco/src/metadata/: device.rs  mod.rs  scheduler.rs
crates/vihaco/src/observer/: mod.rs  stdio.rs
crates/vihaco/src/runtime/: generated.rs  marker.rs  mod.rs  observe.rs
crates/vihaco/src/syntax/: mod.rs  parse.rs  resolve.rs  types.rs
crates/vihaco/src/traits/: encoding.rs  event_sink.rs  instruction.rs  machine.rs  mod.rs
crates/vihaco/tests/: composite_machine_compile_fail.rs  multisection_bytecode.rs  rfc0007_machine_compile_fail.rs  rfc0007_machine_shared_scheduler.rs  rfc0008_observe_macro.rs
crates/vihaco/tests/compile_fail/composite_machine/: duplicate-device-code.stderr  duplicate-header.rs  duplicate-header.stderr  duplicate-loadable-name.rs  duplicate-loadable-name.stderr  header-with-device.rs  header-with-device.stderr  invalid-loadable-name.rs  invalid-loadable-name.stderr  loadable-without-device.rs  loadable-without-device.stderr
crates/vihaco/tests/ui/: rfc0007-machine-ctx-with-unsupported.rs  rfc0007-machine-ctx-with-unsupported.stderr  rfc0007-machine-duplicate-device-code.rs  rfc0007-machine-duplicate-device-code.stderr  rfc0007-machine-duplicate-source-symbol.rs  rfc0007-machine-duplicate-source-symbol.stderr  rfc0007-machine-scheduler-device-conflict.rs  rfc0007-machine-scheduler-device-conflict.stderr  rfc0007-machine-shared-non-core.rs  rfc0007-machine-shared-non-core.stderr  rfc0007-machine-shared-unknown-core.rs  rfc0007-machine-shared-unknown-core.stderr
docs/: README.md  astro.config.mjs  package-lock.json  package.json
docs/examples/: counter.rs  observe.rs  quickstart.rs  quickstart_parse.rs
docs/src/: guides.ts
guide/: index.html
guide/components/: index.html
guide/composites/: index.html
guide/instructions/: index.html
guide/instructions-advanced/: index.html
guide/messages/: index.html
guide/observers/: index.html
guide/parser/: index.html
guide/parser-advanced/: index.html
pr-preview/pr-16/: index.html
pr-preview/pr-17/: index.html
pr-preview/pr-18/: index.html
pr-preview/pr-19/: index.html
pr-preview/pr-21/: index.html
pr-preview/pr-24/: index.html
pr-preview/pr-28/: index.html
pr-preview/pr-29/: index.html
pr-preview/pr-31/: index.html
pr-preview/pr-36/: index.html
pr-preview/pr-37/: index.html
pr-preview/pr-39/: index.html
pr-preview/pr-40/: index.html
pr-preview/pr-42/: index.html
quickstart/: index.html
reference/: index.html
rust-api/: help.html  settings.html
rust-api/search.index/: 01111844cd.js  02fd39d67a.js  0893860719.js  0f07539ceb.js  108fc2b6a3.js  241729d27b.js  312433021e.js  31e95ac166.js  35c3a8a1d9.js  37cc5313d7.js  410509b5cb.js  42dc7f0204.js  4b241d1221.js  518accc56f.js  51d748213d.js  55643813e0.js  563d70cfa1.js  5ba5548ddf.js  5e229a6161.js  612ebf190c.js  63cbdf8460.js  681c5a4247.js  703eab8521.js  77b4457480.js  78d914c1e4.js  7d2b0bdbde.js  7da4e1a7e1.js  root.js
rust-api/vihaco/: all.html  attr.component.html  attr.composite.html  attr.observe.html  derive.Instruction.html  index.html  macro.show.html  macro.show_instruction.html  sidebar-items.js  struct.BytecodeFile.html  (+3 more)
(+1986 files in other folders)
