[package]
name = "vihaco-cpu"
edition = "2024"
description = "CPU/host component implementation for vihaco machines."
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chumsky = "0.10"
codespan = "0.13.1"
eyre = "0.6.12"
log = "0.4.29"
vihaco = { workspace = true }
vihaco-derive = { workspace = true }
vihaco-parser-core = { workspace = true }
vihaco-parser = { workspace = true }
