[package]
name = "vihaco-derive"
edition = "2024"
description = "Procedural macros (#[derive(Instruction)], #[derive(Machine)], …) used by the vihaco crate."
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
