[package]
name = "vihaco-parser-core"
edition = "2021"
rust-version = "1.75"
description = "Core chumsky-based parser primitives shared by the vihaco parser-derive crate."
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
byteorder = "1.5.0"
chumsky = "0.10"
eyre = "0.6.12"
