[package]
name = "vihaco-parser"
edition = "2021"
rust-version = "1.75"
description = "Derive macro (#[derive(Parse)]) that generates chumsky parsers for vihaco syntax types."
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
vihaco-parser-core = { workspace = true }
eyre = "0.6.12"
chumsky = "0.10"

[dev-dependencies]
chumsky = "0.10"
vihaco-parser-core = { workspace = true }
trybuild = "1"
