[package]
name = "vihaco"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[dependencies]
byteorder = "1.5.0"
chumsky = "0.10"
codespan = "0.13.1"
colored = "3.0.0"
env_logger = "0.11.8"
eyre = "0.6.12"
log = "0.4.29"
smallvec = "1.15.1"
vihaco-parser-core = { version = "0.1.0", path = "../vihaco-parser-core" }
vihaco-parser = { version = "0.1.0", path = "../vihaco-parser" }
vihaco-macros = { version = "0.1.0", path = "../vihaco-macros" }

[dev-dependencies]
trybuild = "1.0"
