[package]
name = "vihaco"
edition = "2024"
description = "Virtual ISA and machine framework for hybrid analog/digital quantum control orchestration."
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
byteorder = "1.5.0"
chumsky = "0.10"
codespan = "0.13.1"
colored = "3.0.0"
env_logger = "0.11.8"
eyre = "0.6.12"
log = "0.4.29"
smallvec = "1.15.1"
vihaco-parser-core = { workspace = true }
vihaco-parser = { workspace = true }
vihaco-macros = { workspace = true }

[dev-dependencies]
trybuild = "1.0"
